<resources>
    <string name="app_name">Liviet</string>
    <string name="diet">식단</string>
    <string name="food_name">음식 이름</string>
    <string name="food_image">음식 사진</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="next">다음</string>
    <string name="save">저장</string>
    <string name="plus">추가</string>
    <string name="food_plus">새로운 \n음식 등록</string>
    <string name="diet_plus">식단 추가</string>
    <string name="setup_info">정보를\n입력해주세요.</string>
    <string name="setup_diet_style">다이어트 끼니를\n선택해주세요.</string>
    <string name="select_diet_start_day">식단 시작 요일을\n선택해주세요.</string>
    <string name="setup_life_style">운동량을\n선택해주세요.</string>
    <string name="setup_result">영양 정보</string>
    <string name="weight">몸무게</string>
    <string name="height">키</string>
    <string name="age">나이</string>
    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="workout_style_none">운동량 없음</string>
    <string name="workout_style_low">운동량 적음</string>
    <string name="workout_style_normal">운동량 보통</string>
    <string name="workout_style_high">운동량 많음</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="kcal">칼로리</string>
    <string name="bmi">BMI</string>
    <string name="standard_weight">표준 체중</string>
    <string name="select_one_of_them">하나를 선택해주세요.</string>
    <string name="plz_fill_info">정보를 전부 입력해주세요.</string>
    <string name="select_food">식단 생성에 포함할\n음식을 선택해주세요.</string>
    <string name="add_food">추가할 식단을\n선택해주세요.</string>
    <string name="add_food_amount">음식 양을 입력해주세요.</string>
    <string name="add_new_food">새로운 식단 정보를\n입력해주세요.</string>
    <string name="add_new_food_info">식단 단위, 정량, 영양정보를 입력해주세요.</string>
    <string name="recommended_allowance">섭취 권장량</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="admob_id">ca-app-pub-7552170233373075/5730430259</string>
    <string name="admob">ca-app-pub-7552170233373075~5678459367</string>
    <string name="default_amount">100g</string>
    <string name="allow_grant">권한을 허가해주세요.</string>
    <string name="measure">단위</string>
    <string name="do_you_want_to_remove">삭제하시겠습니까?</string>
    <string name="not_ready_yet">준비중입니다.</string>
    <string name="complete">완료</string>
    <string name="remove">삭제</string>
    <string name="cancel">취소</string>
    <string name="dl">통계</string>
    <string name="settings">설정</string>
    <string name="today_taking">오늘 영양 섭취량</string>
    <string name="suggested_daily_taking">하루 권장 섭취량</string>
    <string name="weekly_taking">주간 영양 섭취량</string>
    <string name="search">검색</string>
    <string-array name="select_measure">
        <item>g</item>
        <item>mg</item>
        <item>l</item>
        <item>개</item>
    </string-array>
    <string-array name="select_image">
        <item>카메라</item>
        <item>갤러리</item>
    </string-array>
    <string-array name="select_main_diet">
        <item>수정</item>
        <item>삭제</item>
    </string-array>
</resources>
