<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.liviet.hoo.liviet.viewmodel.user.UserSetUpViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/select_diet_start_day"
            android:textColor="@color/black"
            style="@style/appFont.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioGroup
                android:id="@+id/day_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/mon" />

                <RadioButton
                    android:id="@+id/tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mon"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/tue" />

                <RadioButton
                    android:id="@+id/wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tue"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/wed" />

                <RadioButton
                    android:id="@+id/thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wed"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/thu" />

                <RadioButton
                    android:id="@+id/fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thu"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/fri" />

                <RadioButton
                    android:id="@+id/sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fri"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/sat" />

                <RadioButton
                    android:id="@+id/sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sat"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/sun" />

            </RadioGroup>
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/diet_style_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:textAppearance="@style/appFont.Medium"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>