<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true">
    <data>
        <variable
            name="viewModel"
            type="com.liviet.hoo.liviet.viewmodel.user.UserSetUpViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/setup_life_style"
            android:textColor="@color/black"
            style="@style/appFont.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <RadioGroup
                android:id="@+id/e_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/e_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/workout_style_none" />

                <RadioButton
                    android:id="@+id/e_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/e_none"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/workout_style_low" />

                <RadioButton
                    android:id="@+id/e_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/e_low"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/workout_style_normal" />

                <RadioButton
                    android:id="@+id/e_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/e_normal"
                    style="@style/CheckBox"
                    android:textAppearance="@style/appFont.Title"
                    android:text="@string/workout_style_high" />
            </RadioGroup>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/life_style_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:textAppearance="@style/appFont.Medium"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>