<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.liviet.hoo.liviet.viewmodel.user.UserSetUpViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/setup_info"
            android:textColor="@color/black"
            style="@style/appFont.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/sexGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sc_corner_radius="4dp"
            app:sc_border_width="2dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/male"
                android:text="@string/male"
                style="@style/RadioButton"
                android:textAppearance="@style/appFont.Medium"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/female"
                android:text="@string/female"
                style="@style/RadioButton"
                android:textAppearance="@style/appFont.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </info.hoang8f.android.segmented.SegmentedGroup>

            <Spinner
                android:id="@+id/heightSpinner"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:spinnerMode="dialog"
                android:background="@null"
                android:layout_marginTop="22dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textAlignment="center"
                android:entries="@{viewModel.heightEntries}"
                android:selection="@{viewModel.heightDfIdx}"
                android:prompt="@string/height"
                app:layout_constraintTop_toBottomOf="@+id/sexGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </Spinner>

            <Spinner
                android:id="@+id/weightSpinner"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:background="@null"
                android:spinnerMode="dialog"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:prompt="@string/weight"
                android:entries="@{viewModel.weightEntries}"
                android:selection="@{viewModel.weightDfIdx}"
                app:layout_constraintTop_toBottomOf="@+id/heightSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </Spinner>

            <Spinner
                android:id="@+id/ageSpinner"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:background="@null"
                android:spinnerMode="dialog"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:prompt="@string/age"
                android:entries="@{viewModel.ageEntries}"
                android:selection="@{viewModel.ageDfIdx}"
                app:layout_constraintTop_toBottomOf="@+id/weightSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </Spinner>


        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:textAppearance="@style/appFont.Medium"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>