<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.liviet.hoo.liviet.viewmodel.food.FoodVM"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_food"
            android:textColor="@color/black"
            style="@style/appFont.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_new_food_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_new_food_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/food_plus"
            android:textColor="@color/colorPrimary"
            android:textAlignment="textEnd"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            style="@style/appFont.XSmall"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/search_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </android.support.v7.widget.SearchView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="320dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/search_food"
            android:background="@android:color/transparent"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_id">
        </com.google.android.gms.ads.AdView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/food_select_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:adapter="@{viewModel.addFoodListAdapter}">
        </android.support.v7.widget.RecyclerView>

        <!--<Button-->
        <!--android:id="@+id/diet_style_next"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/button_color"-->
        <!--android:textAppearance="@style/appFont.Medium"-->
        <!--android:textColor="@color/white"-->
        <!--android:text="@string/next"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"/>-->

    </android.support.constraint.ConstraintLayout>
</layout>